--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 <body>
     <p>test</p>
 </body>
-<script type='module' src='/app.js'></script>
+<script type='module' src='/assignment.js'></script>
 </html>
